--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: magazyn-ocr
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
-    preInstallCommand: |
+    buildCommand: |
       apt-get update && \
-      apt-get install -y libgl1
+      apt-get install -y libgl1 && \
+      pip install -r requirements.txt
+    startCommand: python app.py
