--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     env: python
     buildCommand: |
       apt-get update && \
-      apt-get install -y libgl1 && \
+      apt-get install -y libgl1-mesa-glx && \
       pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
